[gd_scene load_steps=8 format=2]

[ext_resource path="res://Characters/Character.tscn" type="PackedScene" id=1]
[ext_resource path="res://Characters/Player.gd" type="Script" id=2]
[ext_resource path="res://Objects/MeleeWeapons/Axe.tscn" type="PackedScene" id=3]
[ext_resource path="res://Characters/Enemies/deathmarker.png" type="Texture" id=4]
[ext_resource path="res://Characters/PlayerLight.png" type="Texture" id=5]
[ext_resource path="res://Characters/PlayerHit.wav" type="AudioStream" id=6]

[sub_resource type="CircleShape2D" id=1]
radius = 6.6465

[node name="Player" groups=[
"Player",
] instance=ExtResource( 1 )]
rotation = 0.0149852
collision_layer = 2
collision_mask = 55
mass = 1.0
continuous_cd = 2
contacts_reported = 3
contact_monitor = true
script = ExtResource( 2 )
speed = 10000
life = 3
throw_strength = 1000
turn_speed = 10.0
starting_weapon = ExtResource( 3 )

[node name="Camera2D" type="Camera2D" parent="." index="2"]
current = true
zoom = Vector2( 0.4, 0.4 )

[node name="DeathMarker" type="Sprite" parent="." index="3"]
visible = false
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 4 )

[node name="WeaponPosition" type="Position2D" parent="." index="4"]
position = Vector2( 13.3704, -0.267403 )

[node name="Grabber" type="Area2D" parent="." index="5"]
position = Vector2( 12.4883, 0 )
collision_layer = 0
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="Grabber" index="0"]
shape = SubResource( 1 )

[node name="Invincibility" type="Timer" parent="." index="6"]
autostart = true

[node name="Light2D" type="Light2D" parent="." index="7"]
visible = false
position = Vector2( 6.48434, -0.240166 )
rotation = 1.5708
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 5 )
texture_scale = 0.5
range_z_min = 0
range_z_max = 1
range_item_cull_mask = 3
shadow_enabled = true
shadow_filter = 4
shadow_filter_smooth = 10.0
shadow_item_cull_mask = 3

[node name="HitSound" type="AudioStreamPlayer2D" parent="." index="8"]
stream = ExtResource( 6 )
[connection signal="body_entered" from="." to="." method="_on_Player_body_entered"]
[connection signal="body_entered" from="Grabber" to="." method="_on_Grabber_body_entered"]
[connection signal="body_exited" from="Grabber" to="." method="_on_Grabber_body_exited"]
[connection signal="timeout" from="Invincibility" to="." method="_on_Invincibility_timeout"]
